<meter> doesn't update rendering when its value is changed. https://bugs.webkit.org/show_bug.cgi?id=67614

Reviewed by Dimitri Glazkov.

Source/WebCore:

It lacks repaint() when the value is changed.

For non-native appearance it works because the indicator is
implemented in shadow DOM, for native appearance, repainting should be
handled explicitly.

Test: fast/dom/HTMLMeterElement/meter-element-repaint-on-update-value.html

* html/HTMLMeterElement.cpp:
(WebCore::HTMLMeterElement::didElementStateChange):
* rendering/RenderMeter.cpp:
(WebCore::RenderMeter::updateFromElement):
* rendering/RenderMeter.h:
* rendering/RenderProgress.cpp:
(WebCore::RenderProgress::updateAnimationState):

LayoutTests:

* fast/dom/HTMLMeterElement/meter-element-repaint-on-update-value-expected.png: Added.
* platform/chromium/test_expectations.txt:
* platform/mac/dom/HTMLMeterElement/meter-element-repaint-on-update-value-expected.txt: Added.
* platform/mac/dom/HTMLMeterElement/meter-element-repaint-on-update-value.html: Added.

Canonical link: https://commits.webkit.org/84444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95599 268f45cc-cd09-0410-ab3c-d52691b4dbfc